--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "2d array  binary search": "cpp"
+        "2d array  binary search": "cpp",
+        "ostream": "cpp"
     }
 }
