-updated 1 file and created 3 files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,6 +90,7 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
-        "frequency of characters in a given string": "cpp"
+        "frequency of characters in a given string": "cpp",
+        "queue": "cpp"
     }
 }
