-added DSA Lec-22 Soln

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,6 +91,7 @@
         "valarray": "cpp",
         "variant": "cpp",
         "frequency of characters in a given string": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "xutility": "cpp"
     }
 }
