-added cpp lec-22

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,6 +92,7 @@
         "variant": "cpp",
         "frequency of characters in a given string": "cpp",
         "queue": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "locale": "cpp"
     }
 }
