update 1 file, create 4 files and move 9 files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,6 +93,22 @@
         "frequency of characters in a given string": "cpp",
         "queue": "cpp",
         "xutility": "cpp",
-        "locale": "cpp"
+        "locale": "cpp",
+        "format": "cpp",
+        "ios": "cpp",
+        "xfacet": "cpp",
+        "xhash": "cpp",
+        "xiosbase": "cpp",
+        "xlocale": "cpp",
+        "xlocbuf": "cpp",
+        "xlocinfo": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xlocnum": "cpp",
+        "xloctime": "cpp",
+        "xmemory": "cpp",
+        "xstring": "cpp",
+        "xtr1common": "cpp",
+        "xtree": "cpp"
     }
 }
