--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,6 +109,7 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "climits": "cpp"
     }
 }
